# robot_control_solution

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: task1_params.yaml  ur5_controllers.yaml
include/: robot_control.hpp  robot_kinematics.hpp
launch/: task1.launch  task2.launch  task3.launch  ur5_bringup.launch
launch/inc/: load_ur.launch.xml  ur_control.launch.xml
script/: __init__.py  robot_control.py  robot_motion_control.py
src/: robot_control.cpp  robot_control_py.cpp  robot_kinematics.cpp  robot_motion_control.cpp  sin_control.cpp  ur_kin.cpp
